RESOLVED FIXED105547
Web Inspector: Mac WK1 Inspector can't save/load timeline data
https://bugs.webkit.org/show_bug.cgi?id=105547
Summary Web Inspector: Mac WK1 Inspector can't save/load timeline data
Adam Roben (:aroben)
Reported 2012-12-20 09:55:00 PST
To reproduce: 1. Record a timeline using the Mac WebKit1 Inspector (not the Safari Inspector) 2. Right-click There's no "Save Timeline data…" option. And the "Load Timeline data…" option does nothing.
Attachments
Patch (6.71 KB, patch)
2012-12-20 09:58 PST, Adam Roben (:aroben)
no flags
Patch (6.70 KB, patch)
2012-12-20 10:01 PST, Adam Roben (:aroben)
no flags
Patch (6.68 KB, patch)
2012-12-20 10:03 PST, Adam Roben (:aroben)
no flags
Patch (6.68 KB, patch)
2012-12-20 10:04 PST, Adam Roben (:aroben)
no flags
Patch (6.74 KB, patch)
2012-12-20 11:03 PST, Adam Roben (:aroben)
no flags
Patch (6.76 KB, patch)
2012-12-20 13:26 PST, Adam Roben (:aroben)
no flags
Adam Roben (:aroben)
Comment 1 2012-12-20 09:58:52 PST
Adam Roben (:aroben)
Comment 2 2012-12-20 10:01:37 PST
Adam Roben (:aroben)
Comment 3 2012-12-20 10:03:18 PST
Adam Roben (:aroben)
Comment 4 2012-12-20 10:04:14 PST
Adam Roben (:aroben)
Comment 5 2012-12-20 10:09:13 PST
AFAICT there's no way to save/load timeline data in Safari's Inspector, so I don't think this patch will affect it.
Adam Roben (:aroben)
Comment 6 2012-12-20 10:40:08 PST
And of course this won't affect Safari itself, since this is WK1-only.
Pavel Feldman
Comment 7 2012-12-20 10:55:07 PST
Comment on attachment 180359 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180359&action=review > Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:311 > + if (!forceSaveAs) { You probably want to check for url being a part of m_saveURLs. That way before writing into the FS user will see a file chooser.
Adam Roben (:aroben)
Comment 8 2012-12-20 10:59:54 PST
Comment on attachment 180359 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180359&action=review >> Source/WebKit/mac/WebCoreSupport/WebInspectorClient.mm:311 >> + if (!forceSaveAs) { > > You probably want to check for url being a part of m_saveURLs. That way before writing into the FS user will see a file chooser. Ah, good call. I'll do that.
Adam Roben (:aroben)
Comment 9 2012-12-20 11:03:42 PST
Adam Roben (:aroben)
Comment 10 2012-12-20 13:26:11 PST
Adam Roben (:aroben)
Comment 11 2012-12-20 13:26:29 PST
I updated the patch to work correctly when the Inspector is docked.
WebKit Review Bot
Comment 12 2012-12-29 08:15:35 PST
Comment on attachment 180398 [details] Patch Clearing flags on attachment: 180398 Committed r138565: <http://trac.webkit.org/changeset/138565>
WebKit Review Bot
Comment 13 2012-12-29 08:15:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.