Source/WebKit/mac/WebCoreSupport/WebInspectorClient.h
@@ -37,10 +37,12 @@
 #import <wtf/text/WTFString.h>
 
 #ifdef __OBJC__
+@class NSURL;
 @class WebInspectorWindowController;
 @class WebNodeHighlighter;
 @class WebView;
 #else
+class NSURL;
 class WebInspectorWindowController;
 class WebNodeHighlighter;
 class WebView;
@@ -110,7 +112,12 @@ public:
 private:
     void updateWindowTitle() const;
 
+    virtual bool canSave() OVERRIDE { return true; }
+    virtual void save(const String& url, const String& content, bool forceSaveAs) OVERRIDE;
+    virtual void append(const String& url, const String& content) OVERRIDE;
+
     WebView* m_inspectedWebView;
     RetainPtr<WebInspectorWindowController> m_windowController;
     String m_inspectedURL;
+    HashMap<String, RetainPtr<NSURL>> m_saveURLs;
 };
